force-app/main/default/objects/FS_CIF_CSVMapping__mdt/FS_CIF_CSVMapping__mdt.object-meta.xml
<CustomObject>
    <label>FS CIF CSVMapping</label>
    <pluralLabel>FS CIF CSVMapping</pluralLabel>
</CustomObject>