force-app/main/default/objects/FS_CIF_CSVMapping__mdt/fields/CSV_Field__c.field-meta.xml
<CustomField>
    <fullName>CSV_Field__c</fullName>
    <label>CSV Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>