force-app/main/default/objects/FS_CIF_CSVMapping__mdt/fields/Mapping_Type__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Type__c</fullName>
    <label>Mapping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>ColorNotNA</fullName>
            </value>
            <value>
                <fullName>UpperCase</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>ParseDate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>