force-app/main/default/objects/FS_CIF_CSVMapping__mdt/fields/Mapping_Validation__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Validation__c</fullName>
    <label>Mapping Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mapping</fullName>
                <default>true</default>
                <label>Mapping</label>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>